# trame

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  render.yaml
server/: Cargo.toml
server/src/: chunker.rs  config.rs  db.rs  handlers.rs  lib.rs  main.rs  router.rs
web/: README.md  index.html
